--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             <option value="1">Yes</option>
             <option value="0">No</option>
         </select><br><br>
-        <label>Loan Amount Term (month)</label><input type="text" name="loan_amount_term"><br><br>
+        <label>Loan Term (month)</label><input type="text" name="loan_amount_term"><br><br>
         <label>Credit History</label>
         <select name="credit_history">
             <option value="1">Yes</option>
